[package]
name = "expert-octo-disco-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tonic-build = "0.5"
